#7759 bug: Added secondary nav height to vertical offset for section title anchors (to prevent overlap)

--- a/src/components/SectionTitle/_section-title.scss
+++ b/src/components/SectionTitle/_section-title.scss
@@ -18,10 +18,10 @@
   display: block;
   left: 0;
   position: absolute;
-  top: calc(-1 * var(--header-height));
+  top: calc(-1 * (var(--header-height) + var(--secondary-nav-height)));
   visibility: hidden;
   
   @include mq(sm) {
-    top: calc(-1 * var(--header-height-sm));
+    top: calc(-1 * (var(--header-height-sm) + var(--secondary-nav-height)));
   }
 }
